--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -151,7 +151,7 @@
     <div class="content">
       <div class="banner-heading">
         <h1 class="afrohk-title"><span class="afro-title">Afro Language Lab </h1>
-        <h3 class="slogan">L'Anglais à votre portée</h3>
+        <h3 class="slogan">Apprenez l'Anglais autrement</h3>
         <p style="text-align: start;"><a href="#apropos" class="more-btn">En Savoir Plus</a></p>
       </div>
     </div>
@@ -247,9 +247,9 @@
                 alt="English at work" />
             </div>
             <div class="card-body d-flex flex-column align-items-start ms-3">
-              <h3 class="program-name">Natural English at Work</h3>
+              <h3 class="program-name">Natural English for Professionals</h3>
               <p class="program-description">
-                Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais du personnel des entreprises au sein de leur environnement de travail.
+                Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais des cadres d'entreprise dans des clubs.
               </p>
                 <!-- <a href="/englishlang4all/clubs/home" class="course-btn">En Savoir Plus</a> -->
                 <a href="/englishlang4all/clubs/Burkina-Faso/hubs" class="course-btn">En Savoir Plus</a>
