welcome message change

--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -113,8 +113,7 @@
     </div>
 
     <!-- Cours video-->
-    <div class="video-wrapper" style="">
-
+    <div class="video-wrapper">
       <h3 class="course-video-heading">
         <span class="underline-section">Cours en vidéos du module</span>
       </h3>
