--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -113,7 +113,6 @@
               <li><a href="/englishlang4all/clubs/home">Personal English Coaching Program</a></li>
               <li><a href="/pecp">Natural English at Work</a></li>
             </ul>
-
           </div>
           <ul class="footer-social">
             <li><a target="_blank" href="https://web.facebook.com/AfroHK"><i class="fab fa-facebook-f"></i></a></li>
@@ -129,8 +128,8 @@
           <div class="contact-widget footer-widget">
             <div class="footer-title">Contacts</div>
             <div class="text">
-              <p>Sector 16, Tampouy, Ouagadougou</p>
-              <p>+226 64350101</p>
+              <p>Pissy, Ouagadougou</p>
+              <p>+226 53444444</p>
               <p>afrohkteam@afrohk.com</p>
               <div class="whatsApp">
                 <a class=" text-success" href="https://wa.me/22653344444"><i class="fa mx-2 fa-whatsapp"
