--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -178,7 +178,7 @@
       background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       ">
       <% for (let hub of countryHubs){%>
-      <p>
+      <p class="">
         <button class="btn btn-lg btn-dark" type="button" data-bs-toggle="collapse"
           data-bs-target="#N-<%= hub.cityName %>" aria-expanded="false" aria-controls="collapseExample">
           <%= hub.cityName %>
