--- a/views/user/account_verified.ejs
+++ b/views/user/account_verified.ejs
@@ -45,7 +45,9 @@
     </figure>
    
     <div class="container py-2 px-3" style="background-color: rgb(255, 255, 255) ; border-radius: 5px; border: 2px solid black;">
-    <p class="text-danger">Il est fortement recommandé de réinitialiser le mot de passe pour sécuriser son compte. <br> Pour le faire, cliquez sur votre nom d'utilisateur dans la barre de navigation.</p>
+    <p class="text-danger">Il est fortement recommandé de réinitialiser le mot de passe pour sécuriser son compte.</p>
+
+    <a href="/login" class="btn btn-outline-success">Se connecter</a>
    
   </div>
   </div>
