natural english for professionals

--- a/views/partials/pecpNavbar.ejs
+++ b/views/partials/pecpNavbar.ejs
@@ -65,7 +65,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English Clubs</a>
+                            <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
