--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -162,7 +162,7 @@
           </a>
           <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English Clubs</a>
+              <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English for Professionals</a>
             </li>
             <li>
               <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
