--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -163,7 +163,7 @@
 </style>
 <!-- banner-->
 <div class="hub-country-banner d-flex justify-content-center align-items-center">
-  <h2 class="hub-country"> Natural English at Work </h2>
+  <h2 class="hub-country"> Natural English for Professionals</h2>
 </div>
 
 <div class="univ-eng-clubs">
