read and record session

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -245,7 +245,7 @@
                 </h3>
               </div>
               <div id="monitorscreen">
-                <iframe loading="lazy" id="vimeo-content" src="https://www.youtube.com/embed/MeBBb4o0C2w"
+                <iframe loading="lazy" id="vimeo-content" src="https://www.youtube.com/embed/MGbCBxVdm5Y"
                   frameborder="0" height="100%" width="100%" allow="autoplay; fullscreen; picture-in-picture"
                   allow="fullscreen" title="High-intensity Classes"></iframe>
               </div>
