--- a/public/stylesheets/englishforAll/englishClubs/show.css
+++ b/public/stylesheets/englishforAll/englishClubs/show.css
@@ -812,7 +812,7 @@ customers-cards:before {
 }
 
 .sp-card {
-  padding: 1rem 2rem 0;
+  padding: 1rem 0;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   border-radius: 5px;
   transition: all 0.2s;
