--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -2144,7 +2144,9 @@ margin: 30px 0;
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media (max-width: 1100px) {
-
+  .top-footer-line > p{
+    font-size: 1.5rem;
+  }
 
   .news-text {
     padding-top: 1rem;
@@ -2441,7 +2443,7 @@ display: none;
     font-size: 1.2rem;
     height: auto;
   }
-
+ 
 
   .afrohk-title {
     font-size: 5rem;
