--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -820,6 +820,10 @@ margin: 30px 0;
     right: 5%;
     bottom: 5%;
   }
+
+  .top-footer-line > p{
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 800px) {
@@ -870,7 +874,9 @@ margin: 30px 0;
   html {
     font-size: 90%;
   }
-
+  .top-footer-line > p{
+    font-size: 1.3rem;
+  }
   .useful-links {
     font-size: 1rem;
   }
