--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -18,6 +18,7 @@
   .hub-country {
     color: rgb(252, 252, 252);
     text-shadow: 1px 2px 3px rgb(12, 1, 33);
+    padding-left: 2rem;
     font-size: 4rem;
  font-family: 'Poppins', sans-serif;
   }
@@ -93,7 +94,7 @@
 
   @media (max-width: 1000px) {
     .hub-country {
-      font-size: 8rem;
+      font-size: 4rem;
     }
 
     .type-of-club {
@@ -121,9 +122,6 @@
   }
 
   @media (max-width: 698px) {
-    .hub-country {
-      font-size: 6rem;
-    }
 
     .line-1 {
       display: none;
@@ -141,7 +139,7 @@
 
   @media (max-width: 530px) {
     .hub-country {
-      font-size: 4rem;
+      font-size: 3rem;
     }
 
     .type-of-club {
