--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,10 +2,10 @@
   <div class="top-footer-line">
     <p>ALL is commited to provide better language learning experience in Africa</p>
   </div>
-  <div class="container">
+  <div class="px-5">
     <div class="footer-content">
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
+        <div class="col-lg-4 col-md-3 col-sm-12 footer-column">
           <div class="logo-widget footer-widget">
             <svg height="100%" width="100%" stroke-miterlimit="10" class="svg-logo"
               style="fill-rule:nonzero;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;" version="1.1"
@@ -101,12 +101,11 @@
               </g>
             </svg>
             <div class="text">
-              <p class="ms-4">Better Language Learning Experience</p>
+              <p class="footer-slogan">Learn a Language Differently</p>
             </div>
-
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12  footer-column">
+        <div class="col-lg-4 col-md-5 col-sm-12  footer-column">
           <div class="service-widget footer-widget">
             <div class="footer-title">Liens Utiles</div>
             <ul class="list">
@@ -115,26 +114,22 @@
             </ul>
           </div>
           <ul class="footer-social">
-            <li><a target="_blank" href="https://web.facebook.com/AfroHK"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/afro_h_k/"><i class="fab fa-instagram"></i></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/company/afro-house-of-knowledge"><i class="fa fa-linkedin"></i></a></li>
-            <li><a target="_blank" href="https://www.youtube.com/channel/UCoyOQOqSqRGjH8FrkvT4b0g"><i
+            <li><a id="m-facebook" target="_blank" href="https://web.facebook.com/AfroHK"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a id="m-instagram" target="_blank" href="https://www.instagram.com/afro_h_k/"><i class="fab fa-instagram"></i></a></li>
+            <li><a id="m-linkedIn" target="_blank" href="https://www.linkedin.com/company/afro-house-of-knowledge"><i class="fa fa-linkedin"></i></a></li>
+            <li><a id="m-youtube" target="_blank" href="https://www.youtube.com/channel/UCoyOQOqSqRGjH8FrkvT4b0g"><i
                   class="fab fa-youtube"></i></a></li>
-            <li><a target="_blank" href="https://wa.me/22653344444#"><i class="fa mx-2 fa-whatsapp"
+            <li><a id="m-whatsapp" target="_blank" href="https://wa.me/22653344444#"><i class="fa mx-2 fa-whatsapp"
                   aria-hidden="true"></i></a></li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 footer-widget">
-          <div class="contact-widget footer-widget">
+        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
+          <div class="service-widget footer-widget">
             <div class="footer-title">Contacts</div>
             <div class="text">
               <p>Pissy, Ouagadougou</p>
               <p>+226 53444444</p>
               <p>afrohkteam@afrohk.com</p>
-              <div class="whatsApp">
-                <a class=" text-success" href="https://wa.me/22653344444"><i class="fa mx-2 fa-whatsapp"
-                    aria-hidden="true"></i>53344444</a>
-              </div>
             </div>
           </div>
         </div>
