--- a/views/user/account_already_activated.ejs
+++ b/views/user/account_already_activated.ejs
@@ -1,10 +1,19 @@
 <% layout('layouts/boilerplate') %>
 <style type="text/css">
+    body{
+        background: #667db6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
   .jumbotron {
     padding: 4rem 2rem;
     margin: 2rem 0;
     background-color: rgba(231, 239, 241, 0.733);
     border-radius: 0.3rem;
+  }
+  .container {
+    height: 80vh;
   }
 </style>
 
@@ -12,8 +21,9 @@
   <div class="jumbotron">
      <p class="fst-italic text-center text-danger"><strong>Compte déja activé</strong></p> 
     <hr/>
-    
-    <a class="btn btn-outline-success btn-small mx-3 mt-2" href="/" role="button">Page d'acceuil</a>
-    <a class="btn btn-outline-primary btn-small mx-3 mt-2" href="/login" role="button">Se Connecter</a>
+    <div class=" d-flex justify-content-center flex-wrap">
+    <a class="btn btn-outline-success d-block btn-small mx-3 mt-2" href="/" role="button">Page d'acceuil</a>
+    <a class="btn btn-outline-primary d-block btn-small mx-3 mt-2" href="/login" role="button">Se Connecter</a>
+</div>
   </div>
 </div>
