--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -109,8 +109,8 @@
           <div class="service-widget footer-widget">
             <div class="footer-title">Liens Utiles</div>
             <ul class="list">
-              <li><a href="/englishlang4all/clubs/home">Personal English Coaching Program</a></li>
-              <li><a href="/pecp">Natural English at Work</a></li>
+              <li><a href="/pecp">Personal English Coaching Program</a></li>
+              <li><a href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English at Work</a></li>
             </ul>
           </div>
           <ul class="footer-social">
