--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -220,7 +220,7 @@
                 <h3 class="eng-club-name">By <%= Club.instituition %></h3>
                 <p class="definition"></p>
                 <div class="d-flex justify-content-between">
-                <p class="found-date inline-block me-3">Since <%= Club.foundDate %></p> <p><a class="inline-block button-7"
+                <p class="found-date inline-block me-3">Since <%= Club.foundDate %></p> <p><a class="inline-block mx-2 button-7"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
                     more</a></p>
                 </div>
